--- a/jobs.html
+++ b/jobs.html
@@ -11,10 +11,10 @@
         <h1>JavaJam Coffee House</h1>
         </header>
         <nav>
-            <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li><a href="http://127.0.0.1:5500/menu.html">Menu</a></li>
-            <li><a href="http://127.0.0.1:5500/music.html">Music</a></li>
-            <li><a href="http://127.0.0.1:5500/jobs.html">Jobs</a></li>
+           <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="music.html">Music</a></li>
+            <li><a href="jobs.html">Jobs</a></li>
         </nav>
         <main>
             <div id="herojobs"></div>
