--- a/music.html
+++ b/music.html
@@ -26,14 +26,14 @@
             <h4>January</h4>
                 <div class = details>
                     <div class="floatleft">
-                        <a href="/image/melanie.jpg"><img src="melaniethumb.jpg"></a>
+                        <a href="melanie.jpg"><img src="melaniethumb.jpg"></a>
                     </div>
                     <span>Melanie Morrisentertains with her melodic folk style.</span>
                 </div>
             <h4>February</h4>
                 <div class = details>
                     <div class = floatleft>
-                        <a href="/image/"><img src="gregthumb.jpg"></a>
+                        <a href="greg.jpg"><img src="gregthumb.jpg"></a>
                     </div>
                     <span>Tahoe Greg is back from his tour. New songs. New stories.</span>
                 </div>
