--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <main>
             <div id="heroroad"></div>
-            <h2>Follow the Winding Road to JavaJam</h2>
+            <h2>Yap Cheng Zu</h2>
             <p>
                 We're a little out of the way, but take a drive down Garrett Bay Road to JavaJam
                 today! Indulge in our locally roasted free-trade coffee and home-made pastries.
