--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </main>
             <footer>
             <p>Copyright &copy; 2018 JavaJam Coffee House<br>
-            <a href="mailto:yapcz-wp23@student.tarc.edu.my">yapcz-wp23@student.tarc.edu.my</a>
+            <a href="mailto:yapcz-wp23@student.tarc.edu.my">yapcz-wp23@student.tarc.edu.my</a><br>
             </p>
             </footer>
         </div>
